# llm-systems-cookbook

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  CURRICULUM_SPEC.md  IMPROVEMENT_PLAN.md  LICENSE  Makefile  README.md  _config.yml  _toc.yml  environment.yml  glossary.md  intro.md  open_source_llms.md  pyproject.toml  requirements.txt  robots.txt
.github/workflows/: book.yml  ci.yml  scoring.yml
_templates/: layout.html
notebooks/01_inference/: 01_autoregressive_decoding_kv_cache.ipynb  02_attention_roofline.ipynb  03_pagedattention_block_allocator.ipynb  04_continuous_batching_orca.ipynb  05_flashattention2_triton.ipynb  06_radix_prefix_cache.ipynb  07_speculative_decoding.ipynb  08_medusa_eagle_tree_speculation.ipynb  09_sarathi_chunked_prefill.ipynb  10_disaggregated_prefill_decode.ipynb  README.md  index.md
notebooks/02_rag/: 01_chunking_strategies.ipynb  02_faiss_dense_retrieval.ipynb  03_bm25_splade_rrf_hybrid.ipynb  04_colbertv2_late_interaction.ipynb  05_two_stage_reranking.ipynb  06_hyde_query_rewriting.ipynb  07_raptor_hierarchical.ipynb  08_graphrag_leiden.ipynb  09_ragas_evaluation.ipynb  README.md  index.md
notebooks/03_training/: 01_mixed_precision_accum_checkpointing.ipynb  02_ddp_vs_fsdp2.ipynb  README.md  index.md
notebooks/04_agents/: 01_react_from_scratch.ipynb  02_structured_outputs_three_ways.ipynb  03_langgraph_state_machines.ipynb  04_dspy_3_miprov2.ipynb  05_mcp_server_client.ipynb  06_autogen_0_4_vs_crewai.ipynb  07_agent_evaluation_suite.ipynb  README.md  index.md
notebooks/04_agents/_fixtures/: 01_react_traces.json
notebooks/05_serving/: 01_roofline_analysis.ipynb  02_kv_cache_variants_mha_gqa_mla.ipynb  03_kv_compression_streamingllm_h2o_snapkv.ipynb  04_2bit_kv_quantization_kivi.ipynb  05_gptq_awq_weight_quant.ipynb  06_smoothquant_fp8_nf4.ipynb  07_quarot_spinquant_rotations.ipynb  08_batching_strategies.ipynb  09_moe_expert_parallelism.ipynb  10_disaggregated_serving_distserve.ipynb  11_serving_observability_slo_autoscaler.ipynb  README.md  index.md
notebooks/06_eval/: 01_perplexity_from_scratch.ipynb  02_mmlu_harness_calibration.ipynb  03_humaneval_unbiased_pass_k.ipynb  04_llm_as_judge_bias.ipynb  05_arena_elo_bradley_terry.ipynb  06_long_context_niah_ruler.ipynb  07_contamination_detection.ipynb  08_lm_eval_inspect_ai.ipynb  README.md  index.md
notebooks/07_gpu/: 01_gpu_architecture_tour.ipynb  02_triton_101_softmax.ipynb  03_triton_tiled_matmul.ipynb  04_triton_flashattention.ipynb  05_fused_rope_rmsnorm.ipynb  06_torch_compile_deep_dive.ipynb  07_nsight_profiling.ipynb  08_jax_sharding_pipeline.ipynb  README.md  index.md
notebooks/08_production/: 01_claude_sdk_prompt_caching.ipynb  02_litellm_router_fallbacks.ipynb  03_tool_use_agent.ipynb  04_structured_outputs_real.ipynb  05_hybrid_rag_production.ipynb  06_mcp_real_server.ipynb  07_dspy_miprov2_optimizer.ipynb  08_inspect_ai_eval_harness.ipynb  09_gpu_providers_pricing_and_model_fit.ipynb  index.md
notebooks/08_production/_fixtures/: 01_caching.json  02_litellm.json  03_tool_use.json  04_structured.json  05_rag.json  06_mcp.json  07_dspy.json  08_inspect.json
scoring/: __init__.py  harness.py  run_all.py  test_harness.py
scripts/: check_evergreen.py  fetch_data.py  refresh_fixtures.py  rewrite_init_cells.py  warm_cache.py
src/llm_infra_lab/: __init__.py  _utils.py  datasets.py  models.py
src/llm_systems_cookbook/: __init__.py  _utils.py  datasets.py  models.py  nb.py
