[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-systems-cookbook"
version = "0.1.0"
description = "A hands-on cookbook for modern LLM systems engineering"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "Muhammad Hassan Ahmed" }]
keywords = ["llm", "cookbook", "inference", "serving", "rag", "agents", "training", "gpu", "triton"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "torch==2.7.*",
  "numpy>=1.26",
  # RAG notebooks pin the older transformers to stay compatible with
  # pylate==1.1.7 and sentence-transformers==5.4.1; training notebooks
  # may override upward to 4.51.x for newer TRL features.
  "transformers>=4.46.3,<5.0",
  "tokenizers>=0.21",
  "accelerate>=0.36",
  "datasets>=3.0",
  "jupyter>=1.0",
  "nbformat>=5.10",
  "nbclient>=0.10",
  "matplotlib>=3.8",
  "pandas>=2.2",
  # Small runtime deps that show up in more than one track before the
  # corresponding extra is installed (networkx: 02_rag/08 GraphRAG;
  # pydantic: 04_agents/02 structured outputs).
  "networkx>=3.2",
  "pydantic>=2.0",
  "tqdm",
  "pytest>=8.0",
]

[project.optional-dependencies]
inference = ["vllm==0.8.*", "triton==3.3.*"]
rag = [
  "sentence-transformers==5.4.1",
  "faiss-cpu==1.13.2",
  "rank-bm25",
  "chromadb",
  "pylate==1.1.7",
]
training = [
  "peft==0.14.*",
  "trl==0.26.*",
  "bitsandbytes==0.45.*",
  "deepspeed",
]
agents = [
  "langgraph==1.1.*",
  "dspy-ai==3.0.*",
  "mcp==1.3.*",
  "autogen-agentchat==0.4.*",
  "crewai==0.80.*",
  "outlines",
  "pydantic>=2.0",
]
serving = [
  "llmcompressor==0.4.*",
  "gptqmodel",
  "autoawq",
]
production = [
  "anthropic>=0.45",
  "openai>=1.60",
  "litellm>=1.60",
  "instructor>=1.7",
  "outlines>=0.1",
]
# RAGAS is deliberately pinned to the 0.2.x API. RAGAS 0.4.x broke the metric
# interface used by notebooks/02_rag/09 and requires a separate metric refactor
# that is out of scope for this curriculum as authored.
eval = [
  "lm-eval==0.4.11",
  "inspect-ai==0.3.199",
  "lighteval==0.11.0",
  "ragas==0.2.14",
]
gpu = ["triton==3.3.*"]
jax = ["jax==0.6.*", "jaxlib"]
book = [
  "jupyter-book==1.0.*",
  "sphinx-book-theme>=1.1",
  "myst-nb>=1.1",
  "linkify-it-py",
]
dev = ["ruff>=0.6", "pre-commit", "nbformat", "nbclient", "nbstripout"]

[project.urls]
Repository = "https://github.com/hassan11196/llm-systems-cookbook"
Documentation = "https://hassan11196.github.io/llm-systems-cookbook/"
Issues = "https://github.com/hassan11196/llm-systems-cookbook/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["notebooks/**/*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"scoring/test_harness.py" = ["B011"]

[tool.pytest.ini_options]
testpaths = ["scoring"]
addopts = "-ra --strict-markers"
